Correcion de vh

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <section class="weCanDo">
       <div class="weCanDo_tittle">
-        <h2>Colecciona tus momentos, nosotros lo imprimimos</h2>
+        <h2>Colecciona tus momentos, nosotros lo hacemos realidad</h2>
       </div>
       <div class="weCanDo1">
         <div class="weCanDo2">
