Correccion de diseño en como funciona

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
       <div class="weCanDo1">
         <div class="weCanDo2">
-          <img src="/images/fotoalbum.jpg" alt="" width="250px" />
+          <img src="/images/fotoalbum.jpg" alt="" width="250rem" />
           <h3>Fotolibros</h3>
           <p>Desde S/.120</p>
           <ul>
@@ -154,7 +154,7 @@
       </div>
       <div class="weCanDo1">
         <div class="weCanDo2">
-          <img src="/images/wedding.jpg" alt="" width="250px" />
+          <img src="/images/wedding.jpg" alt="" width="250rem" />
           <h3>Álbum de boda</h3>
           <p>
             Tuviste la boda de tus sueños con toda tu familia reunida. ¡Conserva
@@ -162,7 +162,7 @@
           </p>
         </div>
         <div class="weCanDo2">
-          <img src="/images/vacations.jpg" alt="" width="250px" />
+          <img src="/images/vacations.jpg" alt="" width="250rem" />
           <h3>Vacaciones en Familia</h3>
           <p>
             Crea un álbum con las fotos de tus vacaciones de verano llenas de
@@ -170,7 +170,7 @@
           </p>
         </div>
         <div class="weCanDo2">
-          <img src="/images/baby.jpg" alt="" width="250px" />
+          <img src="/images/baby.jpg" alt="" width="250rem" />
           <h3>Primer año de tu bebé</h3>
           <p>
             Ya sea una sesión de fotos profesional o fotografías tomadas por ti,
@@ -186,17 +186,17 @@
       </div>
       <div class="weCanDo1">
         <div class="weCanDo2">
-          <img src="/images/easy.png" alt="" height="100px" />
+          <img src="/images/easy.png" alt="" height="100rem" />
           <h3>Super fácil de usar</h3>
           <p>En minutos crea un proyecto con tus fotos favoritas.</p>
         </div>
         <div class="weCanDo2">
-          <img src="/images/best_price.png" alt="" height="100px" />
+          <img src="/images/best_price.png" alt="" height="100rem" />
           <h3>El mejor precio</h3>
           <p>Fotolibros desde S/. 100.00, envío S/. 20.00 a todo el Perú</p>
         </div>
         <div class="weCanDo2">
-          <img src="/images/warranty.png" alt="" height="100px" />
+          <img src="/images/warranty.png" alt="" height="100rem" />
           <h3>Garantía</h3>
           <p>
             Garantía de satisfacción, si no te gusta te devolvemos tu dinero
@@ -211,30 +211,33 @@
         <div class="itWorkTittle">
           <h2>¿Cómo funciona?</h2>
         </div>
-        <div></div>
-        <ol>
-          <li>
-            <span>Crea una cuenta</span>
-            <p>
-              Sube tus fotos favoritas a tu cuenta y selecciona las que quieres
-              imprimir
-            </p>
-          </li>
-          <li>
-            <span>personaliza</span>
-            <p>
-              Escoge la foto de portada, agrega comentarios, frases, fechas,
-              etc.
-            </p>
-          </li>
-          <li>
-            <span>Ordena</span>
-            <p>Recibe tu proyecto impreso en una semana aproximadamente.</p>
-          </li>
-        </ol>
+        <div class="functions">
+          <h4><span>1.</span> Crea una cuenta</h4>
+          <p>
+            Sube tus fotos favoritas a tu cuenta y selecciona las que quieres
+            imprimir.
+          </p>
+        </div>
+        <div class="functions">
+          <h4><span>2.</span> Personaliza</h4>
+          <p>
+            Escoge la foto de portada, agrega comentarios, frases, fechas, etc.
+          </p>
+        </div>
+        <div class="functions">
+          <h4><span>3.</span> Selecciona</h4>
+          <p>
+            Escoge entre nuestras diferentes opciones, el modelo, color, tamaño
+            etc.
+          </p>
+        </div>
+        <div class="functions">
+          <h4><span>4.</span> Ordena</h4>
+          <p>Recibe tu proyecto impreso en una semana aproximadamente.</p>
+        </div>
       </div>
       <div>
-        <img src="/images/regalos.webp" alt="" height="300px" />
+        <img src="/images/regalos.webp" alt="" height="450rem" />
       </div>
     </section>
     <footer>
