Scroll animation update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="left-header">
-        <a href="">
+        <a href="index.html">
           <h2>Fotograf</h2>
         </a>
 
@@ -29,9 +29,11 @@
       </div>
       <div class="right-header">
         <div>
-          <a href="">Información</a>
-          <a href="">Empresa</a>
-          <a href="">Blog</a>
+          <a href="#gallery">Gallery</a>
+          <a href="#create">Crear</a>
+          <a href="#ideas">Ideas</a>
+          <a href="#doit">Hazlo</a>
+          <a href="#funcionality">Funcionalidad</a>
         </div>
         <div class="login">
           <div class="login-button">
@@ -52,7 +54,7 @@
         </h1>
       </div>
     </section>
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-indicators">
           <button
@@ -111,7 +113,7 @@
       </div>
     </section>
 
-    <section class="weCanDo">
+    <section class="weCanDo" id="create">
       <div class="weCanDo_tittle">
         <h2>Todo lo que puedes crear con tus fotos</h2>
       </div>
@@ -148,7 +150,7 @@
       </div>
     </section>
 
-    <section class="weCanDo">
+    <section class="weCanDo" id="ideas">
       <div class="weCanDo_tittle">
         <h2>¡Ideas para contar tu historia!</h2>
       </div>
@@ -180,7 +182,7 @@
       </div>
     </section>
 
-    <section class="weCanDo">
+    <section class="weCanDo" id="doit">
       <div class="weCanDo_tittle">
         <h2>Colecciona tus momentos, nosotros lo hacemos realidad</h2>
       </div>
@@ -204,9 +206,7 @@
         </div>
       </div>
     </section>
-
-    <!---CORREGIR ESTA SECCION-->
-    <section class="itWork">
+    <section class="itWork" id="funcionality">
       <div>
         <div class="itWorkTittle">
           <h2>¿Cómo funciona?</h2>
