--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
         <div class="login">
           <div class="login-button">
-            <a href="">Iniciar Sesión</a>
+            <a href="/html/login.html">Iniciar Sesión</a>
           </div>
           <div class="register-button">
-            <a href="">Regístrate</a>
+            <a href="/html/login.html">Regístrate</a>
           </div>
         </div>
       </div>
