--- a/html/myAccount.html
+++ b/html/myAccount.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/style/myAccount.css" />
   </head>
   <body>
-    <div class="heart"></div>
-    <h1>Diana, I love you my love</h1>
+    <div><div class="heart"></div></div>
+    <div><h1>Diana</h1></div>
+    <div><h1>I love you my love</h1></div>
   </body>
 </html>
