--- a/html/myAccount.html
+++ b/html/myAccount.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love Heart Animation</title>
+
     <link rel="stylesheet" href="/style/myAccount.css" />
+    <title>Document</title>
   </head>
-  <body>
-    <div><div class="heart"></div></div>
-    <div><h1>Diana</h1></div>
-    <div><h1>I love you my love</h1></div>
-  </body>
+  <body></body>
 </html>
