--- a/html/login.html
+++ b/html/login.html
@@ -13,7 +13,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/style/login.css" />
-    <title>Fotograf</title>
+    <title>Fotograf - Login</title>
   </head>
   <body>
     <section class="container">
