--- a/html/myAccount.html
+++ b/html/myAccount.html
@@ -3,9 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="shortcut icon"
+      href="/images/fotograf-logo.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style/headerAndFooter.css" />
     <link rel="stylesheet" href="/style/myAccount.css" />
-    <title>Document</title>
+    <title>Fotograf - Mi cuenta</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="left-header">
+        <a href="index.html">
+          <h2>Fotograf</h2>
+        </a>
+      </div>
+      <div class="right-header">
+        <div>
+          <a href="">Inicio<i class="bx bxs-home-alt-2"></i></a>
+          <a href="">Mi cuenta<i class="bx bxs-user"></i></a>
+          <a href="">Mi carrito<i class="bx bx-cart"></i></a>
+        </div>
+      </div>
+    </header>
+    <section class="wellcome">
+      <h2>Bienvenido, <span>Usuario</span></h2>
+    </section>
+    <section class="whatDo">
+      <h1>¿Qué te gustaría crear el dia de hoy?</h1>
+    </section>
+    <section class="whatCreate">
+      <div class="whatCreate1">
+        <div class="whatCreateImg">
+          <img src="/images/fotoalbum.jpg" alt="" />
+        </div>
+        <div class="whatCreateTxt">
+          <h3>Foto Libros</h3>
+        </div>
+      </div>
+      <div class="whatCreate1">
+        <div class="whatCreateImg">
+          <img src="/images/fotocuadro.webp" alt="" />
+        </div>
+        <div class="whatCreateTxt">
+          <h3>Foto Cuadros</h3>
+        </div>
+      </div>
+      <div class="whatCreate1">
+        <div class="whatCreateImg">
+          <img src="/images/fotoRevista.webp" alt="" />
+        </div>
+        <div class="whatCreateTxt">
+          <h3>Foto revistas</h3>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
