--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <section>
-      <div class="title">
+      <div class="tittle">
         <h1>
           "Captura el instante, revive el momento: tus recuerdos hechos
           eternos."
