add footer myacoount

--- a/html/myAccount.html
+++ b/html/myAccount.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="left-header">
-        <a href="index.html">
+        <a href="../index.html">
           <h2>Fotograf</h2>
         </a>
       </div>
@@ -63,5 +63,33 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="foot">
+        <div>
+          <h4>Fotograf</h4>
+          <a href=""><p>Home</p></a>
+          <a href=""><p>Nosotros</p></a>
+          <a href=""><p>Mi cuenta</p></a>
+        </div>
+        <div>
+          <h4>Productos</h4>
+          <a href=""><p>Fotolibros</p></a>
+          <a href=""><p>Fotocuadros</p></a>
+          <a href=""><p>Fotorevistas</p></a>
+        </div>
+        <div>
+          <h4>Contacto</h4>
+          <a href=""><p>ayuda@fotograf.com</p></a>
+          <a href=""><p>01 510 2586</p></a>
+        </div>
+        <div>
+          <h4>Síguenos en</h4>
+          <a href=""><img src="" alt="" width="50px" /></a>
+          <a href=""> <img src="" alt="" width="50px" /></a>
+          <a href=""><img src="" alt="" width="50px" /></a>
+          <a href=""><img src="" alt="" width="50px" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
