Add close session

--- a/html/myAccount.html
+++ b/html/myAccount.html
@@ -28,7 +28,7 @@
           <a href="">Inicio<i class="bx bxs-home-alt-2"></i></a>
           <a href="">Mi cuenta<i class="bx bxs-user"></i></a>
           <a href="">Mi carrito<i class="bx bx-cart"></i></a>
-        </div>
+          <a href="">Cerrar sesión<i class='bx bxs-user-x'></i></a>
       </div>
     </header>
     <section class="wellcome">
